--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goverment Polytechnic Khutri</title>
-    <link rel="stylesheet" href="https://github.com/RaxSoren/adityahansda.github.io/blob/main/form.css">
+    <link rel="stylesheet" href="Form.css">
 </head>
 
 <body>
