--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <li><a href="/index.html">Home</a></li>
             </div>
             <div class="Projects">
-                <li><a class="reg-text" href="/all.html">All Projects</a></li>
+                <li><a class="reg-text" href="all.html">All Projects</a></li>
             </div>
             <div class="register">
-                <li><a class="reg-text" href="/form.html">Register</a></li>
+                <li><a class="reg-text" href="form.html">Register</a></li>
             </div>
            
           
