--- a/form.html
+++ b/form.html
@@ -15,13 +15,13 @@
         <nav>
             <ul>
                 <div class="home">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </div>
                 <div class="Projects">
-                    <li><a class="reg-text" href="/all.html">All Projects</a></li>
+                    <li><a class="reg-text" href="all.html">All Projects</a></li>
                 </div>
                 <div class="register">
-                    <li><a class="reg-text" href="/form.html">Register</a></li>
+                    <li><a class="reg-text" href="form.html">Register</a></li>
                 </div>
 
 
