--- a/all.html
+++ b/all.html
@@ -12,13 +12,13 @@
     <nav> 
         <ul> 
           <div class="home">
-              <li><a href="/index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
           </div>
           <div class="Projects">
-            <li><a class="reg-text" href="/all.html">All Projects</a></li>
+            <li><a class="reg-text" href="all.html">All Projects</a></li>
         </div>
           <div class="register">
-              <li><a  href="/form.html">Register</a></li>
+              <li><a  href="form.html">Register</a></li>
           </div>
          
        
