--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a class="reg-text" href="all.html">All Projects</a></li>
             </div>
             <div class="register">
-                <li><a class="reg-text" href="form.html">Register</a></li>
+                <li><a class="reg-text" href="https://github.com/RaxSoren/adityahansda.github.io/blob/main/form.html">Register</a></li>
             </div>
            
           
